# wikidata-shortest-genealogical-path

./: .gitignore  Cargo.toml  LICENSE  README.md  wrangler.toml
src/: lib.rs
src/snapshots/: wikidata_shortest_genealogical_path__tests__construct_query.snap
