[package]
name = "wikidata-shortest-genealogical-path"
version = "0.1.0"
edition = "2021"
publish = false
license = "AGPL-3.0"
authors = ["Jakub Wieczorek <jakubw@jakubw.eu>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
dot = "0.1"
futures-util = "0.3"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.11"
json_dotpath = "1"
layout-rs = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1"
strum = { version = "0.25", features = ["derive"] }
url = "2"
worker = "0.0.18"

[dev-dependencies]
insta = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "__rustls"] }
